@@ -235,3 +235,6 @@ Changed the code to use the c language idiom for conditionals testing pointers.
 
 Changed the code to use the asterisk memory allocation routines rather than the
 c library routines directly.
+
+Reuse speaker and listener mix buffers. This should be more efficient than
+allocating/freeing them every time voice frames are mixed.
